- removed command: set_managed_column_width
- removed command: get_managed_column_width
- removed command: set_table_data
- removed command: get_table_data
- removed command: get_table_item
- removed command: set_table_item
- removed command: get_table_selections
- removed command: set_table_selection
- removed command: insert_column
- removed command: insert_row
- removed command: set_headers

New Keywords:
- add_window: Added "min_size" keyword #700
- add_window: Added "max_size" keyword #700
- add_selectable: Added "width" keyword
- add_selectable: Added "height" keyword

New Commands:
- table
- add_table_column
- clear_data_grid
- insert_grid_column
- delete_grid_column
- delete_grid_row
- insert_grid_row
- get_grid_data
- set_grid_data
- get_grid_item
- set_grid_item
- get_grid_selections
- set_grid_selection


Updates:
- imgui: updated to v1.82
- imfiledialog: updated to v0.5.5
- implot: updated to commit 1d9381a
- value_storage: removed

Fixes:
- start_dearpygui: fixed primary window not found crash #523
- callback_error: prevent callback error crash
- numpy: numpy arrays not working with plots

------------------------------------------------------------------------
 VERSION 0.6.151
------------------------------------------------------------------------
Fixes:
- add_text: changed default wrap to -1
- tree_node: fixed label being ignored in context manager

------------------------------------------------------------------------
 VERSION 0.6.149
------------------------------------------------------------------------

Fixes:
- callback: fixed method callback issue #506 

------------------------------------------------------------------------
 VERSION 0.6.148
------------------------------------------------------------------------

Fixes:
- debug tool: fix item position freeze

------------------------------------------------------------------------
 VERSION 0.6.146
------------------------------------------------------------------------

Upgrades: