@@ -2,6 +2,7 @@
 
 #include <string>
 #include <unordered_map>
+#include <imgui.h>
 #include "mvPython.h"
 #include "mvEvents.h"
 
@@ -17,6 +18,19 @@ namespace Marvel {
 	class mvFontManager : public mvEventHandler
 	{
 
+		struct Font
+		{
+			std::string                         key;
+			std::string                         name;
+			ImFont*                             fontPtr;
+			std::string                         file;
+			std::string                         rangeHint;
+			int                                 size;
+			std::vector<ImWchar>                chars;
+			std::vector<std::array<ImWchar, 3>> fontGlyphRangeCustom;
+			std::vector<std::pair<int, int>>    charRemaps;
+		};
+
 	public:
 
 		static void InValidateFontTheme();
@@ -25,10 +39,15 @@ namespace Marvel {
 
 		mvFontManager();
 
-		void    addFont(const std::string& font, const std::string& file, int size);
+		void addFont(const std::string& font, const std::string& file, int size, const std::string& rangeHint,
+			const std::vector<ImWchar>& chars, const std::vector<std::array<ImWchar, 3>>& fontGlyphRangeCustom,
+			const std::vector<std::pair<int, int>>& charRemaps);
 		ImFont* getFont(const std::string& font, int size);
 		void    rebuildAtlas();
 		bool    isInvalid() const;
+		void    updateDefaultFont();
+
+		void show_debugger();
 
 	private:
 
@@ -37,13 +56,13 @@ namespace Marvel {
 
 	private:
 
-		std::unordered_map<std::string, ImFont*>     m_fonts;
-		std::unordered_map<std::string, int>         m_fontSize;
-		std::unordered_map<std::string, std::string> m_fontFile;
-		bool                                         m_dirty = false;
-		ImFont*                                      m_font = nullptr;
-		std::string                                  m_fontName;
-		int                                          m_fontSize = 13;
+		std::vector<Font> m_fonts;
+		bool              m_dirty = false;
+		
+		// default
+		ImFont*           m_font = nullptr;
+		std::string       m_fontName;
+		int               m_size = 13;
 
 	};
 
