@@ -249,6 +249,7 @@ namespace Marvel {
 		mvInput::CheckInputs();
 
 		m_textureStorage->show_debugger();
+		m_fontManager->show_debugger();
 
         std::lock_guard<std::mutex> lk(m_mutex);
 		mvEventBus::Publish(mvEVT_CATEGORY_APP, mvEVT_PRE_RENDER);
