@@ -57,6 +57,8 @@ Breaking Changes:
 - removed command: insert_column
 - removed command: insert_row
 - removed command: set_headers
+- removed command: add_additional_font
+- removed command: add_character_remap
 
 New Keywords:
 - add_window: Added "min_size" keyword #700
@@ -78,6 +80,8 @@ New Commands:
 - set_grid_item
 - get_grid_selections
 - set_grid_selection
+- set_font
+- add_font
 
 
 Updates:
